--- a/ui/layouts.templ
+++ b/ui/layouts.templ
@@ -9,9 +9,9 @@ templ Main(content templ.Component) {
 		<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 		<title>LED Strip Control</title>
 		<link href="/static/css/output.css" rel="stylesheet"/>
-		<script src="https://unpkg.com/htmx.org@1.9.10"></script>
+		<script src="/static/assets/htmx.min.js"></script>
 	</head>
-	<body class="bg-gray-200">
+	<body class="flex pt-10 bg-indigo-950 ">
 		@content
 	</body>
 	</html>
